--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  "engines": {
+  "node": "20.x"
+  },
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
